# api/swagger/swagger.yaml
@@ -111,6 +111,30 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /servicex/ping:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: Misc_Controller
+    get:
+      description: Performs a pingcheck on a service from API-Gateway
+      # used as the method name of the controller
+      operationId: servicxPingCheck
+      parameters:
+        - name: name
+          in: query
+          description: The name of the service to perform the pingcheck 
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/PingCheckResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
